--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -51,6 +51,7 @@ button {
   letter-spacing: 1px;
   font-size: 14px;
   border-radius: 4px;
+  height: 20px;
 }
 
 .btn-plain {
